--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "easy-live-stream",
+  "name": "Easy Live Stream",
   "description": "A Vue.js web extension",
   "version": null,
   "manifest_version": 2,
