--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "fibers": "^5.0.0",
+    "laravel-echo": "^1.8.1",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1",
     "vuetify": "^2.2.11",
