--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,14 +7,13 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
+  "permissions": ["cookies", "webRequest", "*://*.localhost/"],
   "browser_action": {
     "default_title": "easy-live-stream",
     "default_popup": "popup/popup.html"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "scripts": ["background.js"]
   },
   "options_page": "options/options.html"
 }
